--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
             </label>
           </div>
 
-          <div class="g-recaptcha" data-sitekey="6Le17NcrAAAAACXZT9WCPcjAv3wLsuceh-nIryuJ"></div>
+          
           <button type="button" class="submit-btn" id="submit-btn">確認画面へ</button>
         </div>
       </form>
@@ -179,6 +179,7 @@
         <div class="confirm-row"><span class="confirm-label">お問い合わせ種類</span><div id="c-category" class="confirm-value"></div></div>
         <div class="confirm-row"><span class="confirm-label">件名</span><div id="c-subject" class="confirm-value"></div></div>
         <div class="confirm-row"><span class="confirm-label">本文</span><div id="c-message" class="confirm-value"></div></div>
+        <div class="g-recaptcha" data-sitekey="6Le17NcrAAAAACXZT9WCPcjAv3wLsuceh-nIryuJ" style="margin-bottom:20px; display:flex; justify-content:center;"></div>
         <div class="actions">
           <button id="back-btn" class="submit-btn" type="button" style="background:#9ca3af">戻る</button>
           <button id="send-btn" class="submit-btn" type="button">送信する</button>
