--- a/contact.html
+++ b/contact.html
@@ -66,8 +66,9 @@
     /* --- フォーム専用スタイル (kari2準拠 + 修正) --- */
     main { padding-bottom: 120px; } /* フッター固定対策 */
 
-    .contact-intro-text,
-    .privacy-notice {
+    .contact-intro-text { text-align: center; margin-bottom: 20px; padding: 16px 20px; background: #f9fafb; border-radius: 8px; }
+
+.privacy-notice {
       max-width: 800px;
       margin: 0 auto 20px;
       padding: 16px 20px;
