--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -5,18 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>プライバシーポリシー | 合同会社WaJu</title>
 
-  <!-- Favicon / PWA（indexの設定を踏襲） -->
+  <!-- Favicon / PWA -->
   <link rel="icon" type="image/png" sizes="32x32" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-32x32.png?v=1">
   <link rel="icon" type="image/png" sizes="16x16" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon-16x16.png?v=1">
   <link rel="apple-touch-icon" sizes="180x180" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/apple-touch-icon.png?v=1">
-  <link rel="icon" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/favicon.ico?v=1">
   <link rel="manifest" href="https://htnmjsqgoapvuanrsuma.supabase.co/storage/v1/object/public/assets/site.webmanifest?v=1">
   <meta name="theme-color" content="#0f172a">
 
   <style>
+    /* ========== index_part1.txt から復元したヘッダー/フッター共通のCSS ========== */
     :root{--container:1120px; --gap:16px; --shadow:0 10px 25px rgba(0,0,0,.18)}
     *{box-sizing:border-box}
-    body{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff}
+    /* bodyのline-heightをindex_part1.txtに合わせて1.7に設定 */
+    body{margin:0;font-family:system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans JP','Hiragino Kaku Gothic ProN',Meiryo,sans-serif;color:#0f172a;background:#fff;line-height:1.7}
     a{color:inherit;text-decoration:none}
     main{min-height:40vh}
     .container{max-width:var(--container);margin:0 auto;padding:0 16px}
@@ -30,25 +31,18 @@
     .slot.brand{flex:0 0 auto}
     .slot.nav{flex:1 1 auto}
     .hf-copy{display:flex;width:100%}
-    /* Mobile nav trigger */
     .hamburger{display:none;appearance:none;border:1px solid #111;background:#fff;color:#111;cursor:pointer;padding:8px;border-radius:10px;box-shadow:0 1px 2px rgba(0,0,0,.12)}
-    .hamburger:hover{background:#fff}
-    .hamburger:focus-visible{outline:2px solid #93c5fd;outline-offset:2px}
     .hamburger .bar{display:block;width:22px;height:2px;background:currentColor;margin:4px 0;border-radius:2px}
-    /* Drawer */
     .drawer{position:fixed;inset:0;pointer-events:none}
     .drawer .overlay{position:absolute;inset:0;background:rgba(0,0,0,.35);opacity:0;transition:opacity .24s ease}
-    .drawer .panel{position:absolute;top:0;right:0;height:100%;width:min(86vw,380px);background:#fff;transform:translateX(100%);
-      transition:transform .24s ease;box-shadow:var(--shadow);display:flex;flex-direction:column}
+    .drawer .panel{position:absolute;top:0;right:0;height:100%;width:min(86vw,380px);background:#fff;transform:translateX(100%);transition:transform .24s ease;box-shadow:var(--shadow);display:flex;flex-direction:column}
     .drawer[aria-hidden="false"]{pointer-events:auto}
     .drawer[aria-hidden="false"] .overlay{opacity:1}
     .drawer[aria-hidden="false"] .panel{transform:none}
     .drawer .panel header{padding:14px 16px;border-bottom:1px solid #e5e7eb;display:flex;justify-content:space-between;align-items:center}
-    .drawer .panel header .title{font-weight:700}
     .drawer .panel nav{padding:10px 8px;display:flex;flex-direction:column;gap:8px;overflow:auto}
     .drawer .panel nav a{padding:12px 10px;border-radius:10px}
     .drawer .panel nav a:hover{background:#f1f5f9}
-    /* Responsive */
     @media (max-width:768px){
       .container{padding:0 12px}
       :root{--container:100%}
@@ -56,26 +50,98 @@
       .hamburger{display:block;margin-left:auto}
       #site-footer .hf-nav{display:none !important}
     }
-
-    /* ======= Privacy page area ======= */
-    main .card{
-      max-width:1000px;margin:32px auto;padding:40px;background:#fff;border-radius:12px;
-      box-shadow:0 2px 8px rgba(0,0,0,0.08);line-height:1.8
+    
+    /* ========== プライバシーポリシー本文のおしゃれCSS (維持) ========== */
+    #page-content .container {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 0 20px;
     }
-    h1{margin:0 0 20px;font-size:32px;text-align:center}
-    h2{margin:32px 0 12px;font-size:20px;color:#1976d2;border-left:4px solid #1976d2;padding-left:8px}
-    p{margin:0 0 14px}
-    ul{margin:0 0 14px 20px}
-    .signature{margin-top:40px;text-align:right;font-weight:700}
+
+    .privacy-content {
+      line-height: 1.8;
+      color: #333;
+      font-size: 16px;
+    }
+
+    /* メインタイトル */
+    .privacy-content h1 {
+      margin: 0 0 40px;
+      padding-bottom: 10px;
+      font-size: 2.5rem;
+      font-weight: 700;
+      text-align: center;
+      color: #0f172a;
+      border-bottom: 2px solid #e0e0e0;
+    }
+
+    /* 各セクションの見出し */
+    .privacy-content h2 {
+      margin: 40px 0 16px;
+      font-size: 1.5rem;
+      font-weight: 600;
+      color: #1976d2;
+      padding-bottom: 5px;
+      border-bottom: 1px dashed #bbdefb;
+    }
+
+    /* パラグラフ */
+    .privacy-content p {
+      margin: 0 0 24px;
+      text-align: justify;
+    }
+
+    /* リスト */
+    .privacy-content ul {
+      margin: 0 0 24px 20px;
+      padding-left: 0;
+      list-style-type: none;
+    }
+    .privacy-content ul li {
+      position: relative;
+      padding-left: 20px;
+      margin-bottom: 8px;
+    }
+    .privacy-content ul li::before {
+      content: '・';
+      color: #1976d2;
+      position: absolute;
+      left: 0;
+      top: 0;
+      font-weight: bold;
+    }
+
+    /* 署名部分 */
+    .signature{
+      margin-top: 50px;
+      padding-top: 15px;
+      text-align: right;
+      font-weight: 700;
+      font-size: 1.1rem;
+      color: #555;
+      border-top: 1px solid #e0e0e0;
+    }
+
+    /* モバイル向け調整 */
+    @media (max-width: 768px) {
+      .privacy-content h1 {
+        font-size: 2rem;
+        margin-bottom: 30px;
+      }
+      .privacy-content h2 {
+        font-size: 1.3rem;
+        margin-top: 30px;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- Header / Footer are rendered from Supabase settings -->
+  <!-- Header (index_part1.txtから復元) -->
   <header id="site-header" class="hf-wrap"></header>
 
   <main id="page-content" aria-live="polite">
     <div class="container">
-      <div class="card">
+      <div class="privacy-content">
         <h1>プライバシーポリシー</h1>
 
         <p>合同会社WaJu（以下「当社」）は、個人情報保護の重要性を深く認識し、以下の方針に基づき個人情報の適切な取り扱いと保護に努めます。</p>
@@ -109,9 +175,10 @@
     </div>
   </main>
 
+  <!-- Footer (index_part3.txtから復元) -->
   <footer id="site-footer" class="hf-wrap"></footer>
 
-  <!-- Mobile drawer -->
+  <!-- Mobile drawer (index_part3.txtから復元) -->
   <div id="mobile-drawer" class="drawer" aria-hidden="true">
     <div class="overlay" data-close></div>
     <div class="panel" role="dialog" aria-modal="true" aria-labelledby="drawer-title">
@@ -125,18 +192,18 @@
     </div>
   </div>
 
+  <!-- Supabase / Header-Footer Loader (index_part3.txtから復元) -->
   <script type="module">
-    /* ===== Supabase client ===== */
     const { createClient } = await import("https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm");
     const sb = createClient(
       "https://htnmjsqgoapvuanrsuma.supabase.co",
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imh0bm1qc3Fnb2FwdnVhbnJzdW1hIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTUzMzI3MDEsImV4cCI6MjA3MDkwODcwMX0.1AACTWZmChfmIIfBad0sf-hLV2bnaUt7bVURXnd0uKA"
-    ); /* index.txt と同一設定を使用 */
+    );
 
-    /* ===== Helpers ===== */
     const $ = s => document.querySelector(s);
     const toJustify = p => p==='left'?'flex-start':p==='right'?'flex-end':'center';
     const num = (v,f)=>{const n=Number(v);return Number.isFinite(n)&&n>0?n:f};
+    // index_part3.txtに合わせて正規表現を修正
     const withFallback = s => !s ? "" : (/\b(sans-serif|serif|monospace)\b/i.test(s) ? s : `${s}, sans-serif`);
     const stripQuotes = s => s ? s.replace(/^['"]+|['"]+$/g,'') : '';
     const bgParts = (row, def) => {
@@ -156,32 +223,38 @@
         sb.from("hf_settings").select("*").eq("area","footer").single()
       ]);
       allMenus = menus||[];
+
+      // ヘッダー処理 (index_part3.txt)
       renderHeader(hdr||{}, allMenus);
+
+      // フッター処理 (index_part3.txt)
       renderFooter(ftr||{}, allMenus);
+
       buildDrawer(allMenus);
-      adjustOffsets(hdr||{}, ftr||{});
-      addResizeObserver(hdr||{}, ftr||{});
+      adjustOffsets(hdr||{}, ftr||{}); // index_part3.txtのオリジナルの引数を使用
+      addResizeObserver(hdr||{}, ftr||{}); // index_part3.txtのオリジナルの引数を使用
     }
 
     function linkOf(m){ return (m.url ?? m.href ?? '#'); }
 
+    // =========================
+    // ヘッダー処理 (index_part3.txtのロジックに復元)
+    // =========================
     function renderHeader(d, menus){
       const items = (menus||[]).filter(m=>m.is_active && m.show_in_header)
         .map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
-
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.header_font_family ? `font-family:${withFallback(d.header_font_family)};` : "";
       const cls = d.layout_mode==="column" ? "hfbar hf-column" : "hfbar hf-row";
-      const paddingY = (d.padding && d.padding.trim()) ? d.padding.split(' ')[0] : "8px 0";
+      const paddingY = d.padding || "8px 0"; // index_part3.txtのpadding
       const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
-
       $("#site-header").innerHTML = `
-        <div class="hf-bg" id="hf-header-bg" style="background:${backgroundShorthand} !important;background-color:${bgColor} !important;background-image:${bgImage==='none'?'none':bgImage} !important;">
+        <div class="hf-bg" id="hf-header-bg" style="background:${backgroundShorthand};">
           <div class="container">
-            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
+            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY};">
               <div class="slot brand" style="${brandJustifyMargins(d.company_alignment)}">
                 <div class="hf-brand">
-                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" onerror="this.style.display='none'" style="max-height:${num(d.logo_height||d.bar_height,60)}px">`:""}
+                  ${d.logo_url?`<img src="${d.logo_url}" alt="logo" style="max-height:${num(d.logo_height||60,60)}px">`:""}
                   <span style="color:${d.company_color};font-weight:${d.company_weight};font-size:${num(d.header_company_size,18)}px">${d.company_name||""}</span>
                 </div>
               </div>
@@ -194,90 +267,70 @@
             </div>
           </div>
         </div>`;
-
-      // 確実固定
       const bg = $("#hf-header-bg");
       if(d.header_fixed && bg){
-        Object.assign(bg.style, {position:"fixed", top:"0", left:"0", right:"0", zIndex:"1000", width:"100%"});
+        Object.assign(bg.style,{position:"fixed",top:"0",left:"0",right:"0",zIndex:"1000",width:"100%"});
       }
-
-      const btn = $("#hamburger");
-      if(btn){
-        btn.addEventListener("click", ()=> {
-          const open = $("#mobile-drawer").getAttribute("aria-hidden")==="false";
-          if(open) closeDrawer(); else openDrawer();
-        });
-      }
+      $("#hamburger")?.addEventListener("click",()=>{const open=$("#mobile-drawer").getAttribute("aria-hidden")==="false";open?closeDrawer():openDrawer();});
     }
 
+    // =========================
+    // フッター処理 (index_part3.txtのロジックに復元)
+    // =========================
     function renderFooter(d, menus){
       const items = (menus||[]).filter(m=>m.is_active && m.show_in_footer)
         .map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
-
       const {bgColor,bgImage} = bgParts(d, "#0f172a");
       const ff = d.footer_font_family ? `font-family:${withFallback(d.footer_font_family)};` : "";
       const cls = d.layout_mode==="row" ? "hfbar hf-row" : "hfbar hf-column";
-      const paddingY = (d.padding && d.padding.trim()) ? d.padding.split(' ')[0] : "8px 0";
+      const paddingY = d.padding || "8px 0"; // index_part3.txtのpadding
       const backgroundShorthand = (bgImage==='none') ? bgColor : `${bgImage}, ${bgColor}`;
-
-      const inner = d.layout_mode==="row"
-        ? `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
-           <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`
-        : (d.layout_mode==="nav-top"
-          ? `<nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>
-             <div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>`
-          : `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight||'normal'};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
-             <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`);
+      // index_part3.txtのinnerロジックに復元 (nav-top分岐あり)
+      const inner = d.layout_mode==="nav-top"
+        ? `<nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>
+           <div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>`
+        : `<div class="hf-copy" style="color:${d.footer_color};font-weight:${d.footer_weight};justify-content:${toJustify(d.footer_alignment)};font-size:${num(d.footer_copy_size,14)}px">${d.footer_text||""}</div>
+           <nav class="hf-nav" style="justify-content:${toJustify(d.nav_alignment_footer)};color:${d.nav_color_footer};font-weight:${d.nav_weight_footer};font-size:${num(d.footer_nav_size,14)}px">${items}</nav>`;
 
       $("#site-footer").innerHTML = `
-        <div class="hf-bg" id="hf-footer-bg" style="background:${backgroundShorthand} !important;background-color:${bgColor} !important;background-image:${bgImage==='none'?'none':bgImage} !important;">
+        <div class="hf-bg" id="hf-footer-bg" style="background:${backgroundShorthand};">
           <div class="container">
-            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY}; height:${num(d.bar_height,60)}px;">
+            <div class="${cls}" style="${ff};--gap:${num(d.link_spacing,16)}px; padding:${paddingY};">
               ${inner}
             </div>
           </div>
         </div>`;
-
-      if(d.footer_fixed){
-        const wrap=$("#hf-footer-bg");
-        Object.assign(wrap.style, {position:"fixed", left:"0", right:"0", bottom:"0", zIndex:"1000", width:"100%"});
+      const bg = $("#hf-footer-bg");
+      if(d.footer_fixed && bg){
+        Object.assign(bg.style,{position:"fixed",bottom:"0",left:"0",right:"0",zIndex:"1000",width:"100%"});
       }
     }
 
+    // ドロワー/開閉関数 (index_part3.txtのロジックに復元)
     function buildDrawer(menus){
-      const list = (menus||[]).filter(m=>m.is_active);
-      const nav = $("#drawer-nav");
-      nav.innerHTML = list.map(m => `<a href="${linkOf(m)}">${m.title}</a>`).join("");
+      const items = menus.filter(m=>m.is_active).map(m=>`<a href="${linkOf(m)}">${m.title}</a>`).join("");
+      $("#drawer-nav").innerHTML = items;
+    }
+    function openDrawer(){const d=$("#mobile-drawer");d.setAttribute("aria-hidden","false");$("#hamburger").setAttribute("aria-expanded","true");}
+    function closeDrawer(){const d=$("#mobile-drawer");d.setAttribute("aria-hidden","true");$("#hamburger").setAttribute("aria-expanded","false");}
+    $("#drawer-close")?.addEventListener("click", closeDrawer);
+    $("#mobile-drawer .overlay")?.addEventListener("click", closeDrawer);
 
-      $("#drawer-close").addEventListener("click", closeDrawer);
-      $("#mobile-drawer [data-close]").addEventListener("click", closeDrawer);
-      document.addEventListener("keydown", (e)=>{ if(e.key==="Escape") closeDrawer(); });
+    // オフセット調整ロジック (index_part3.txtのロジックに復元)
+    function adjustOffsets(h,f){
+      const headerEl=$("#hf-header-bg");
+      const body=document.body;
+      // index_part3.txtのpaddingTopロジックに復元
+      body.style.paddingTop=headerEl?`${headerEl.offsetHeight}px`:"0";
+      // index_part3.txtのpaddingBottomロジックに復元（フッター固定がないためここでは"0"）
+      // フッター固定がある場合はfooterEl.offsetHeightを使用するロジックはaddResizeObserver側で対応しているはず
+      body.style.paddingBottom="0";
     }
 
-    function openDrawer(){
-      $("#mobile-drawer").setAttribute("aria-hidden","false");
-      $("#hamburger")?.setAttribute("aria-expanded","true");
-      document.body.style.overflow="hidden";
-      setTimeout(()=>$("#drawer-close")?.focus(),100);
-    }
-    function closeDrawer(){
-      $("#mobile-drawer").setAttribute("aria-hidden","true");
-      $("#hamburger")?.setAttribute("aria-expanded","false");
-      document.body.style.overflow="";
-    }
-
-    function adjustOffsets(hdr, ftr){
-      const headerEl = $("#hf-header-bg");
-      const footerEl = $("#hf-footer-bg");
-      document.body.style.paddingTop = (hdr?.header_fixed && headerEl) ? headerEl.getBoundingClientRect().height + "px" : "";
-      document.body.style.paddingBottom = (ftr?.footer_fixed && footerEl) ? footerEl.getBoundingClientRect().height + "px" : "";
-    }
-
-    function addResizeObserver(hdr,ftr){
-      const ro = new ResizeObserver(()=>adjustOffsets(hdr,ftr));
-      const h = $("#hf-header-bg"), f = $("#hf-footer-bg");
-      if(h) ro.observe(h); if(f) ro.observe(f);
-      window.addEventListener('resize', ()=>adjustOffsets(hdr,ftr));
+    function addResizeObserver(h,f){
+      const ro=new ResizeObserver(()=>adjustOffsets(h,f));
+      const headerEl=$("#hf-header-bg");const footerEl=$("#hf-footer-bg");
+      if(headerEl) ro.observe(headerEl); if(footerEl) ro.observe(footerEl);
     }
 
     loadHF();
